<resources>
	<string name="app_name">MaSo</string>
	<string name="action_change_password">Change password</string>
	<string name="password_hint">Password</string>
	<string name="error_camera_permission_denied">Cannot scan QR codes, camera permission denied</string>
	<string name="error_qr_code_format_not_valid">This is not a valid QR code</string>
	<string name="cancel">Cancel</string>
	<string name="retry">Retry</string>
	<string name="error_overlay_title">QR code submission failed</string>
	<string name="global_network_offline">No Internet connection available</string>
	<string name="global_network_fail">Communication with server failed</string>
	<string name="global_network_unknown_host">Cannot establish a connection to the server</string>
	<string name="global_network_timeout">Connection timed out</string>
	<string name="global_network_parse_fail">Unable to process response from server</string>
	<string name="team_label">Team id: %1$d</string>
	<string name="problem_label">Problem number: %1$d</string>
	<string name="add_qr_code">Add QR Code</string>
	<string name="cancel_qr_code">Cancel QR Code</string>
	<string name="title_request_success_add">QR code successfully added</string>
	<string name="title_request_success_cancel">QR code successfully cancelled</string>
	<string name="action_settings">Settings</string>
	<string name="camera_permission_denied_title">QR code reader needs camera permission</string>
	<string name="allow_camera_permission_btn">Allow camera</string>
	<string name="enter_manually">Enter data manually</string>
	<string name="manual_fill_in_title">Enter team and problem number manually</string>
	<string name="team_number_hint">Team Number</string>
	<string name="submit_btn">Submit</string>
	<string name="problem_number_hint">Problem Number</string>
	<string name="error_invalid_data">Invalid data</string>

	<array name="request_options">
		<item>@string/add_qr_code</item>
		<item>@string/cancel_qr_code</item>
	</array>
</resources>
