<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	>

	<data>
		<variable
			name="view"
			type="cz.cuni.mff.maso.ui.qr.ManualFillInView" />
		<variable
			name="viewModel"
			type="cz.cuni.mff.maso.ui.qr.ManualFillInViewModel" />

		<import type="android.text.TextUtils" />
	</data>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="16dp"
		android:gravity="center_horizontal"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:breakStrategy="balanced"
			android:padding="6dp"
			android:text="@string/manual_fill_in_title"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="256dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/team_id_input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="numberSigned"
				android:hint="@string/team_number_hint"
				android:text="@={viewModel.teamId}" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="256dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:layout_marginBottom="8dp"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/problem_id_input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="numberSigned"
				android:hint="@string/problem_number_hint"
				android:text="@={viewModel.problemId}" />

		</com.google.android.material.textfield.TextInputLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<com.google.android.material.button.MaterialButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="16dp"
				android:text="@string/cancel"
				android:onClick="@{() -> view.cancelOverlay()}"
				style="@style/Widget.Bonder.Button.TextButton.Black" />

			<com.google.android.material.button.MaterialButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/submit_btn"
				android:enabled="@{!TextUtils.isEmpty(viewModel.teamId) &amp;&amp; !TextUtils.isEmpty(viewModel.problemId)}"
				android:onClick="@{() -> view.onSubmitClicked()}"
				style="@style/Widget.Bonder.Button.TextButton.Yellow" />
		</LinearLayout>
	</LinearLayout>

</layout>